# n-trailer-lqr-control

./: .gitignore  LICENSE  README.md  pyproject.toml  scenario.yaml
ntrailer/: __init__.py  controller.py  lqr.py  model.py  model_builder.py  scenario.py  spline_trajectory.py  visualization.py
regimes/: default.sreg
scripts/: demo_backward_driving.py  run_gui.py
